# FLAM-OpenCV-OpenGl-project

./: README.md  build.gradle  build.sh  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  frame_processor.cpp  frame_processor.h  opencv_processor.cpp
app/src/main/java/com/example/opencvopenglapp/: CameraGLSurfaceView.java  CameraHandler.java  FPSMonitor.java  MainActivity.java  OpenCVProcessor.java  OpenGLRenderer.java  SamsungCameraHandler.java  SimpleCameraHandler.java  WebSocketClient.java
app/src/main/res/drawable/: ic_launcher_round.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
deployment/: index.html
deployment/web-dist/: FrameViewer.d.ts  PerformanceChart.d.ts.map  WebSocketClient.d.ts.map  WebSocketClient.js.map  types.d.ts  types.d.ts.map  types.js  types.js.map
web/: package-lock.json  package.json  server.py  test.html  test_server.py  tsconfig.json
web/src/: FrameViewer.ts  PerformanceChart.ts  WebSocketClient.ts  app.ts  types.ts
